--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,19 +3,21 @@
 <%= form_for(@user) do |f| %>
 
 <!-- エラーメッセージ表示-->
-<% if @user.errors.any? %>
-	<h3><%= @user.errors.count %>error occurrence</h3><!--エラーメッセ-->
-	<ul>
-		<% @user.errors.full_messages.each do |message| %>
-		<li><%= message %></li>
-		<% end %>
-	</ul>
-<% end %>
+<div class="error_msg">
+	<% if @user.errors.any? %>
+		<h3><%= @user.errors.count %>error occurrence</h3><!--エラーメッセ-->
+		<ul>
+			<% @user.errors.full_messages.each do |msg| %>
+				<li><%= msg %></li>
+			<% end %>
+		</ul>
+	<% end %>
+</div>
 <!-- エラーメッセージ表示-->
 
 <div class="field">
-	<%= f.label :title %>
-	<%= f.text_field :title, class: "name" %>
+	<%= f.label :name %>
+	<%= f.text_field :name, class: "name" %>
 </div>
 
 <div class="field">
